# libtorch_learn

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  board.cpp  board.h  gpu2cpu.cpp  libtorch.cpp  libtorch.h  main.cpp  mcts.cpp  mcts.h  nogo.cpp  nogo.h  policy_value_net.cpp  policy_value_net.h  runtool.cpp  submit.cpp  thread_pool.cpp  thread_pool.h  train.cpp  train.h
botzone/: parase_input.cpp  parase_input.h
core/: utils.cpp  utils.h
model/: model-best.pt
submit_merge_v1_files/: CMakeLists.txt  submit_merged.cpp
tests/: board_test.cpp  board_test.h  copy_board_test.cpp  policy_value_net_test.cpp  self_play_test.cpp  test_assert.cpp  test_best_with_random.cpp  test_eval.cpp  test_torch_reshape.cpp  thread_pool_test.cpp  thread_pool_test.h  unittest.cpp
